Fixed issue where margin between post text and image was too big in mobile view

--- a/resources/assets/sass/_mobile.scss
+++ b/resources/assets/sass/_mobile.scss
@@ -38,6 +38,7 @@
     display: block;
     width: 90%;
     border-right: none;
+    min-height: initial;
   }
 
   .post_image{
